# fds-input-parser-rs

./: Cargo.toml
.circleci/: config.yml
fds-input-parser/tests/: integration.rs  room_fire.fds
src/: decode.rs  lib.rs  spec.rs  xb.rs
tests/: integration.rs
tests/Examples/Heat_Transfer/: convective_cooling_p00125.fds
