[package]
name = "fds-input-parser"
version = "0.1.0"
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
namelist = {git = "ssh://git@github.com/JakeOShannessy/namelist-rs.git"}
